hphp/hack/test/typecheck/new_inference/typehole/t22199694.php.like_types.exp
File "t22199694.php", line 12, characters 15-38:
Invalid argument (Typing[4323])
File "t22199694.php", line 5, characters 35-37:
Some type constraint(s) are violated here
File "t22199694.php", line 5, characters 30-30:
T is a constrained type parameter
File "t22199694.php", line 5, characters 35-37:
Expected num
File "t22199694.php", line 12, characters 15-38:
But got vec<~int>
